# learn_opengl

./: CMakeLists.txt  Dependency.cmake  README.md  imgui.ini
shader/: phong.fs  phong.vs  texture.fs  texture.vs
src/: .clang-format  camera.cpp  camera.h  main.cpp  main_00.cpp  main_01.cpp  main_02.cpp  main_03.cpp  main_04.cpp  main_10.cpp  main_color.cpp  shader.cpp  shader.h
